Fix: overflow

--- a/resources/scss/layout_guest.scss
+++ b/resources/scss/layout_guest.scss
@@ -14,6 +14,7 @@ body{
             border-radius: 1.875rem 0 0 1.875rem;
             font-size: 1.75rem;
             border-right: 2px solid black;
+            overflow: hidden;
 
             #aside-title{
                 
